# rustic-exporter

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  Dockerfile.alpine  README.md  Taskfile.yaml  deny.toml  dprint.json  pyproject.toml  pytest.toml  renovate.json5  schema.json
.github/terraform/: .terraform.lock.hcl  main.tf
.github/workflows/: audit.yml  ci.yml  coverage.yml  lint-docs.yml  release-crates.yml  release-docker.yml  release-github.yml
.renovate/: action-autoMerge.json5  github-action-automerge.json5  rust-autoMerge.json5
example/: config.toml
example/grafana/: dashboard.json  dashboard.yaml  rules.yml
src/: cli.rs  collector.rs  config.rs  main.rs
tests/: conftest.py
tests/data/: golden-repo-config.json  golden-repo-exporter-output.txt  golden-repo-snapshots.json
tests/data/golden-repo/: config
tests/functional/: container.py  exporter.py  helpers.py  test_metrics_expose.py  test_prometheus_scrape.py  test_repository_golden.py
