#:schema http://json.schemastore.org/cargo

[package]
name = "rustic-exporter"
version = "0.1.0-rc.9"
edition = "2021"


[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
axum = "0.8.0"
prometheus-client = "0.24.0"
rustic_core = "=0.8.0"
rustic_backend = "=0.5.4"
serde = "1.0.210"
tokio = { version = "1.40.0", features = ["full"] }
toml = "0.9.0"
regex = "1.11.1"
arc-swap = "1.8.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
panic = "unwind"
